--- a/vignettes/CClust-vignette.Rmd
+++ b/vignettes/CClust-vignette.Rmd
@@ -44,13 +44,17 @@ There are two main functions `kmodes` and `khaplotype` coded for clsutering cate
 
 ## Package Structure
 
-`CClust` is structured so the available functions fall under one of three categories. 
+`CClust` is structured so the available functions fall under one of four categories. 
 
 1. [Read data](#read_data): The first manner in which `CClust` can be used is to obtain amplicon datasets from a fastq file. This is done using the function [**`read_fastq`**](#read_fastq) to extract and return a list of data information: reads, quality scores and dimension of data.
 
 \vspace{0.25cm}
 
-2. [Clustering](#clustering): The second way to utilize `CClust` is to clustering categorical datasets using the following functions.
+2. [Simulate data](#simulate): The second way to utilize `CClust` is to is to Simulate clustered categorical datasets. This is done using the function [**`simulator`**](#simulator) to simulate clustered categorical datasets by using continous time Marcov chain.
+
+\vspace{0.25cm}
+
+3. [Clustering](#clustering): The third way to utilize `CClust` is to clustering categorical datasets using the following functions.
 
   -[**`khaplotype`**](#khaplotype): Clustering the amplicon datasets with quality scores, only random initialization is avaiable in `khaplotype`.
     
@@ -58,7 +62,7 @@ There are two main functions `kmodes` and `khaplotype` coded for clsutering cate
     
 \vspace{0.25cm}
 
-3. [Evaluation](#evaluation): Lastly, `CClust` can be employed to evaluate the clustering result by the following functions.
+4. [Evaluation](#evaluation): Lastly, `CClust` can be employed to evaluate the clustering result by the following functions.
 
   -[**`ARI`**](#ARI): Computing the Adjusted Rand Index [@Hubert1985] with the use of function `adjustedRandIndex` in package `mclust`.
   
@@ -117,6 +121,8 @@ A greedy version of the algorithm mentioned above @Arthur07.
 
 2. The `sim.fastq` dataset is sampled from a subset of an amplicon dataset mentioned in the paper DADA2 [@Benjamin2016]. Accordingly, the `assignment.txt` is the true assignment of that simulation data.
 
+3. The `sim_small.fastq` dataset is a smaller simulated amplicon dataset from the same source mentioned above, it is for demonstrating the use of `plot_cluster`.
+
 <br>
 
 # Read Fastq File {#read_data}
@@ -131,7 +137,7 @@ One of the ways to utilize `CClust` is to read the FASTQ file. This can be done 
 
 **Output**
 
-- Return a list contains reads, quality socres (encoded using ASCII 33 to 126). and dim of the data.
+- Return a list contains reads, quality socres (encoded using ASCII 33 to 126) and the dim of the data.
 
 **Functionality** 
 
@@ -146,6 +152,40 @@ dat <- read_fastq(datafile = datFile)
 dat$reads[1:3, 1:10]
 dat$quality[1:3, 1:10]
 dat$dim
+```
+
+<br>
+
+# Simulate data {#simulator}
+
+`CClust` can also be used to simulate clustered categorical datasets. This can be done using the function in the package named `simulator`.
+
+## Usage
+
+**Input**
+
+- `simK` Number of clusters.
+- `n_coordinates` Number of coordinate of the simulated dataset.
+- `n_observations` Number of observation of the simulated dataset.
+- `sim_between_t` Between cluster variation.
+- `sim_within_t` Within cluster variation.
+- `use_dirichlet` Indicate if cimulate datasets with dirichlet prior. Defalut is FALSE.
+- `sim_pi` Mixing proportions, a vector with the same length of specified number of clusters and the sum of the values in this vector has to be 1.
+
+**Output**
+
+- Return a list of simulation dataset results, including the CTMC_probabilities, the true modes, the cluster_assignments, the cluster_sizes and simulated data.
+
+**Functionality** 
+
+The code below demonstrates the use of `simulator`.
+
+```{r}
+# Simulate data with dim 50 * 5, 4 different categories and there are 5 true clusters.
+data <- simulator(simK = 5, n_coordinates = 5, n_observations = 50, n_categories = 4,
+sim_between_t = 2, sim_within_t = 1, use_dirichlet = TRUE, sim_pi = c(0.1, 0.1, 0.2, 0.3, 0.3))
+
+head(data$data)
 ```
 
 <br>
