--- a/vignettes/CClust-vignette.Rmd
+++ b/vignettes/CClust-vignette.Rmd
@@ -121,6 +121,8 @@ A greedy version of the algorithm mentioned above @Arthur07.
 
 2. The `sim.fastq` dataset is sampled from a subset of an amplicon dataset mentioned in the paper DADA2 [@Benjamin2016]. Accordingly, the `assignment.txt` is the true assignment of that simulation data.
 
+2. The `sim.fasta` dataset is sampled from a subset of HMP Mock dataset mentioned in the paper DADA2 [@Benjamin2016].
+
 3. The `sim_small.fastq` dataset is a smaller simulated amplicon dataset from the same source mentioned above, it is for demonstrating the use of `plot_cluster`.
 
 <br>
@@ -137,7 +139,7 @@ One of the ways to utilize `CClust` is to read the FASTQ file. This can be done 
 
 **Output**
 
-- Return a list contains reads, quality socres (encoded using ASCII 33 to 126) and the dim of the data.
+- Return a list contains reads, quality socres (encoded using ASCII 33 to 126) (if read in a fastq file) and the dim of the data.
 
 **Functionality** 
 
@@ -154,7 +156,29 @@ dat$quality[1:3, 1:10]
 dat$dim
 ```
 
-<br>
+# Read Fasta File {#read_data}
+
+Read a FASTA file.
+
+## Usage
+
+**Input**
+
+- `datafile`: Path to a fasta file.
+
+**Output**
+
+- Return a list contains reads and the dim of the data.
+
+**Functionality** 
+
+The code below demonstrates the use of `read_fasta`.
+
+```{r}
+# Read the sim.fastq file
+datFile <- system.file("extdata", "sim.fasta", package = "CClust")
+dat <- read_fasta(datafile = datFile)
+```
 
 # Simulate data {#simulator}
 
